--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cep",
+  "name": "api-ceps",
   "version": "0.0.1",
-  "description": "",
+  "description": "API para consulta de CEPS",
   "author": "Wagner",
   "private": true,
   "license": "UNLICENSED",
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "axios": "^0.21.1",
+    "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
